fix align issue

--- a/src/styles/theme-kbc-rc-switch.less
+++ b/src/styles/theme-kbc-rc-switch.less
@@ -12,6 +12,7 @@
   line-height: 16px;
   padding: 0;
   vertical-align: middle;
+  text-align: center;
   border-radius: 18px 18px;
   border: 1px solid #bdc0c9;
   background-color: #bdc0c9;
